Added feature to add and delete stocks to/from watchlist

--- a/client/src/components/Watchlist/watchlist.css
+++ b/client/src/components/Watchlist/watchlist.css
@@ -5,3 +5,9 @@
     font-size: 14px;
     letter-spacing: 1px;
 }
+
+.delete-button{
+    position: relative;
+    float: right;
+    height: 50%
+}
